# textile-stitch

./: .dockerignore  .gitignore  .textile-monorepo-source  ADVANCED.md  AI_INSTALL_PROMPT.md  Cargo.toml  DEBUGGING.md  Dockerfile  MPCVAULT.md  README.md  TURNKEY.md  dist-workspace.toml  docker-compose.example.yml  stitch.cngn-usdt-bsc.example.toml  stitch.example.toml
.claude/skills/run-stitch/: SKILL.md
.claude/skills/stitch/: SKILL.md
.codex/skills/run-stitch/: SKILL.md
.codex/skills/stitch/: SKILL.md
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml  container.yml  macos-app.yml  publish-template.yml  release.yml
deploy/: container-entrypoint.sh  stitch.env.example  stitch.service
deploy/aws/: README.md  cloudformation.yaml
docs/: ADVANCED.md  install-cloud.md  install-docker.md  install-linux.md  install-macos.md  install-windows.md  signer-mpcvault.md
packaging/linux/: stitch.desktop
packaging/macos/: Info.plist  Stitch.icns  make-app.sh  make-dmg.sh
scripts/: run-local.mjs
src/: approve.rs  banner.rs  cli.rs  config.rs  eip712.rs  feed.rs  funding.rs  indexer.rs  ladder.rs  lean.rs  lib.rs  main.rs  maker.rs  net.rs  poster.rs  quote.rs  rpc.rs  signer.rs  slots.rs  submit.rs  taker.rs  tick.rs  twap.rs  tx.rs  types.rs  update.rs
src/closer/: discover.rs  executor.rs  feemath.rs  mod.rs  runner.rs  strategy.rs
src/setup/: catalog.rs  macos.rs  mod.rs  paths.rs  process.rs  settings.rs  writer.rs
src/setup/templates/: brla-usdt-celo.toml  cngn-usdc-base.toml  cngn-usdt-bsc-testnet.toml  cngn-usdt-bsc.toml  wars-usdt-celo.toml  wbrl-usdt-celo.toml  weth-usdt-ethereum.toml  xaut-usdt-ethereum.toml
src/signer/: local.rs  mod.rs  mpcvault.rs  turnkey.rs
templates/: cngn-usdt-bsc.toml  wars-usdt-celo.toml  wbrl-usdt-celo.toml
tests/: security_audit.rs
