[package]
name = "stitch-bot"
version = "0.1.81"
edition = "2021"
description = "Stitch — Textile filler-network operator bot; market-makes the filler order book with signed UniswapX limit orders."
license = "AGPL-3.0-or-later"
repository = "https://github.com/textile-protocol/textile-stitch"
homepage = "https://github.com/textile-protocol/textile-stitch"
# `stitch` is the bot; `stitch-setup` is an optional GUI helper. Name the default
# so bare `cargo run` (run-local.mjs, dev habit) isn't ambiguous between the two.
default-run = "stitch"

[lib]
name = "stitch_bot"
path = "src/lib.rs"

[[bin]]
name = "stitch"
path = "src/main.rs"

[[bin]]
name = "stitch-setup"
path = "src/bin/stitch-setup/main.rs"
required-features = ["gui"]

[features]
gui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:image"]

[dependencies]
eframe = { version = "0.35", optional = true }
egui = { version = "0.35", optional = true }
rfd = { version = "0.17", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
alloy-primitives = { version = "1", features = ["rlp"] }
alloy-rlp = "0.3"
async-trait = "0.1"
# BIP-39/BIP-32 seed-phrase derivation for the hot wallet (same crate ethers/alloy
# use, so account 0 at m/44'/60'/0'/0/0 matches MetaMask/Rabby/etc.).
coins-bip39 = "0.12"
axum = "0.8"
base64 = "0.22"
k256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "0.8"
toml_edit = "0.22"
url = "2"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axoupdater = "0.10.0"
turnkey_client = "0.7"
zeroize = "1"
rpassword = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
hex = "0.4"

# The profile that 'dist' will build with.
[profile.dist]
inherits = "release"
lto = "thin"
